css/application.css
/***************************************************************************
Main content
***************************************************************************/
html,
body,
.container,
.row,
main {
  height: 100%;
}

.container {
  width: 100%;
  position: static;
}

/***************************************************************************
Header
***************************************************************************/

header {
  position: fixed;
  background: #79BD8F;
  padding: 0 5px 5px 5px;
  left: 0;
  right: 0;
}

header::after {
  content: "";
  display: block;
  clear: both;
}

header a {
  text-decoration: none;
  color: black;
  font-style: italic;
}

header a#show_boards {
  float: left;
  height: 30px;
  line-height: 30px;
  padding: 0 14px;
  margin-bottom: 0;
  margin-top: 8px;
  color: #fff;
  border: none;
  font-weight: 600;
  background: #FF6138;
}

header a#title {
  display: inline-block;
  position: absolute;
  margin-left: -30px;
  left: 50%;
  font-size: 1.6em;
  margin-top: 2px;
  color: #FF6138;
  font-weight: 600;
}

header a#show_boards:hover {
  background: hsl(12, 100%, 70%);
}

header a#title:hover {
  color: hsl(12, 100%, 70%);
}

/***************************************************************************
Boards
***************************************************************************/
#boards {
  padding: 70px 15px 0px 15px;
  overflow: hidden;
}

body,
main,
.container,
#boards {
  white-space: nowrap;
  overflow-x: auto;
}

#boards::after {
  content: "";
  display: block;
  clear: both;
}

#boards h2 {
  border-bottom: 1px solid #ccc;
  color: #666;
  margin-bottom: 8px;
}

.board {
  display: inline-block;
  text-decoration: none;
  color: white;
  font-weight: 600;
  padding: 2px 8px;
  height: 85px;
  width: 23%;
  background: #00A388;
  box-sizing: border-box;
  float: left;
  margin: 0 1%;
  margin-bottom: 12px;
  border-radius: 6px;
}

.board:hover {
  background: #79BD8F;
  color: #fff;
  cursor: grab;
}

a.board {
  position: relative;
}

.board:hover div.remove {
  transition: all 0.5s ease;
  z-index: 2;
}

.board:hover div.remove:hover {
  cursor: pointer;
}

div.remove{
  position: absolute;
  background: red;
  height: 15px;
  width: 3px;
  right: 14px;
  top: 7px;
  transform: rotate(45deg);
  z-index: -1;
}

div.remove::after {
  content: "";
  position: absolute;
  background: red;
  height: 3px;
  width: 15px;
  right: -6px;
  top: 6px;
}

#create_board {
  background: #79BD8F;
  text-align: center;
}

#create_board:hover {
  background: hsl(139, 34%, 70%);
  color: #fff;
  cursor: pointer;
}

#create_board_title {
  line-height: 80px;
  color: #fff;
}

#create_board input {
  background: hsl(139, 34%, 70%);
  width: 100%;
  border: none;
  margin-top: 18px;
}

/***************************************************************************
Lists
***************************************************************************/
#lists {
  display: none;
  position: absolute;
  top: 43px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  padding: 66px 15px 0px 15px;
  overflow-x: auto;
  white-space: nowrap;
  background: hsl(170, 100%, 32%);
}

#lists::after {
  content: "";
  display: block;
  clear: both;
}


div.list {
  box-sizing: border-box;
  display: inline-block;
  width: 270px;
  margin-right: 10px;
  padding: 1px 8px 0 8px;
  background: #dbdbdb;
  position: relative;
}

div.list:hover div.remove {
  transition: all 0.5s ease;
  z-index: 2;
}

div.list:hover div.remove:hover {
  cursor: pointer;
}

#lists h4 {
  color: #fff;
  margin-bottom: 8px;
  position: fixed;
  top: 55px;
  left: 15px;
  right: 15px;
  border-bottom: 1px solid #fff;
  font-weight: 600;
}

#lists h5 {
  color: #515151;
  font-weight: bold;
  margin-bottom: 8px;
}

div a.add_card {
  display: block;
  text-decoration: none;
  color: #999;
  margin: 12px 0 6px 0;
}

div.card {
  height: auto;
  background: #f3f3f3;
  padding: 2px 7px 5px 7px;
}

div.list,
div.card {
  border-radius: 6px;
}

input#create_list {
  position: absolute;
  background: hsl(170, 75%, 32%);
}

input#create_list:focus {
  border: none;
  background: hsl(0, 0%, 90%);
}

input#edit_list {
  background: inherit;
  color: #515151;
  height: auto;
  width: 100%;
  margin: 6px 0 8px 0;
  padding: 1px 6px;
  font-size: 2.4rem;
  border: none;
}

input#edit_list:focus {
  border: none;
}

input.add_card_input {
  color: #515151;
  background: hsl(0, 0%, 86%);
  height: 26px;
  margin: 6px 0px 7px 0px;
  padding-left: 6px;
  padding-bottom: 3px;
  width: 100%;
  border: none;
  border-radius: 0;
}

input.add_card_input:focus {
  border: none;
  padding-bottom: 3px;
  border-bottom: 1px solid hsl(0, 0%, 73%);
}

/***************************************************************************
Cards
***************************************************************************/
.card {
  margin-bottom: 5px;
}

.card h6{
  margin-bottom: 1px;
}

.card p {
  margin: 2px 0 0 0;
  font-style: italic;
}

